--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@astrojs/tailwind": "^5.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@types/react": "^18.3.3",
     "astro": "^4.12.2",
+    "astro-pagefind": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.411.0",
@@ -33,8 +33,5 @@
     "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3"
-  },
-  "devDependencies": {
-    "pagefind": "^1.1.0"
   }
 }
