experimenting with fuse.js search function

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^4.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.411.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
