--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/baloo-2": "^5.0.20",
+    "@fontsource-variable/jetbrains-mono": "^5.0.21",
+    "@fontsource-variable/montserrat": "^5.0.19",
+    "@fontsource/norwester": "^5.0.11",
+    "@fontsource/varela-round": "^5.0.13",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
