--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-external-links": "^3.0.0",
+    "sharp": "^0.33.5",
     "simple-icons-astro": "^13.3.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.6",
