chore: update project name and setup script paths

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devcontainer-astro-template",
+    "name": "CelestialDocs",
     "build": {
         "context": ".",
         "dockerfile": "Dockerfile"
