--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "devcontainer-astro-template",
+    "name": "celestialdocs",
     "type": "module",
     "version": "0.0.1",
     "scripts": {
