--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/react": "^4.4.2",
         "@tailwindcss/vite": "^4.1.16",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "astro": "^5.15.3",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
         "tailwindcss": "^4.1.16"
     },
     "devDependencies": {
