refactor(config): integrate React into Astro config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,8 @@
             "@/*": [
                 "./src/*"
             ],
-            "@posts/*": [
-                "./content/posts/*"
-            ]
-        }
+        },
+        "jsx": "react-jsx",
+        "jsxImportSource": "react"
     }
 }
