--- a/mise.toml
+++ b/mise.toml
@@ -18,3 +18,7 @@ _.file = '.env'
 [tasks.dev]
 description = "Dev Mode"
 run = "astro dev --host 0.0.0.0"
+
+[tasks.dicon]
+description = "Downloads an SVG from svgrepo and saves it to src/assets/icons/"
+run = "bash ./scripts/download-icon.sh"
