--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     },
     "dependencies": {
         "@astrojs/react": "^4.4.2",
+        "@radix-ui/react-navigation-menu": "^1.2.14",
+        "@radix-ui/react-separator": "^1.1.8",
+        "@radix-ui/react-slot": "^1.2.4",
         "@tailwindcss/vite": "^4.1.16",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
         "astro": "^5.15.3",
+        "astro-icon": "^1.1.5",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.556.0",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
+        "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.16"
     },
     "devDependencies": {
         "prettier": "3.6.2",
-        "prettier-plugin-astro": "0.14.1"
+        "prettier-plugin-astro": "0.14.1",
+        "tw-animate-css": "^1.4.0"
     }
 }
