--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
             "@/*": [
                 "./src/*"
             ],
+            "@data/*": [
+                "./data/*"
+            ]
         },
         "jsx": "react-jsx",
         "jsxImportSource": "react"
