--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/mdx": "^4.3.13",
         "@astrojs/react": "^4.4.2",
         "@radix-ui/react-navigation-menu": "^1.2.14",
         "@radix-ui/react-separator": "^1.1.8",
