--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,12 @@
         "dist"
     ],
     "compilerOptions": {
+        "target": "ES2022",
+        "lib": [
+            "ES2022"
+        ],
+        "module": "ESNext",
+        "moduleResolution": "bundler",
         "strictNullChecks": true,
         "baseUrl": ".",
         "paths": {
