--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "@astrojs/mdx": "^4.3.13",
         "@astrojs/react": "^4.4.2",
         "@fontsource-variable/fira-code": "^5.2.7",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-navigation-menu": "^1.2.14",
         "@radix-ui/react-separator": "^1.1.8",
         "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-toggle": "^1.1.10",
         "@tailwindcss/vite": "^4.1.16",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
@@ -22,6 +24,8 @@
         "astro-icon": "^1.1.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "fuse.js": "^7.1.0",
         "lucide-react": "^0.556.0",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
