chore(ci): remove pull request trigger from workflow

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "celestialdocs",
     "type": "module",
     "version": "0.0.1",
+    "packageManager": "pnpm@9.12.3",
     "scripts": {
         "dev": "astro dev",
         "build": "astro build",
