--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
         "dev": "astro dev",
         "build": "astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "typecheck": "astro check"
     },
     "dependencies": {
+        "@astrojs/check": "^0.9.6",
         "@astrojs/mdx": "^4.3.13",
         "@astrojs/react": "^4.4.2",
+        "@astrojs/sitemap": "^3.7.0",
         "@fontsource-variable/fira-code": "^5.2.7",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -31,11 +38,20 @@
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
         "tailwind-merge": "^3.4.0",
-        "tailwindcss": "^4.1.18"
+        "tailwindcss": "^4.1.18",
+        "typescript": "^5.9.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.39.2",
+        "eslint": "^9.39.2",
+        "eslint-plugin-astro": "^1.5.0",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.1",
         "prettier": "3.8.1",
         "prettier-plugin-astro": "0.14.1",
-        "tw-animate-css": "^1.4.0"
+        "prettier-plugin-tailwindcss": "^0.7.2",
+        "tw-animate-css": "^1.4.0",
+        "typescript-eslint": "^8.54.0"
     }
 }
