refactor: reorganize imports and improve code structure
- Moved import statements to improve readability and maintainability across multiple components.
- Ensured consistent import ordering and grouping for better clarity.
- Minor adjustments to the logic in CommandPalette for improved readability.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "typecheck": "astro check"
+        "typecheck": "astro check",
+        "validate": "pnpm lint && pnpm format:check && pnpm typecheck"
     },
     "dependencies": {
         "@astrojs/check": "^0.9.6",
